# gamma

./: CMakeLists.txt  Doxyfile.in  MainPage.dox  test.sh
src/: batch_mode.c  batchmode.c  batchmode.h  field.c  field.h  field_struct.h  gamma.c  gamma.h  gamma_main.c  gamma_model.c  gamma_model.h  gamma_test.c  input_interface.c  input_interface.h  interactive_mode.c  interactive_mode.h  interactivemode.c  interactivemode.h  isnull.h  player_struct.h  stringology.c  stringology.h
src/test/: CMakeLists.txt  gamma_golden_move.c  queue_test.c
src/utilities/: queue.c  queue.h  uset.c  uset.h
tests/: test.sh
